<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/chief_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" 
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#ff5a60"/>
    <RelativeLayout 
        android:id="@+id/chief_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_below="@id/chief_title">
        <LinearLayout 
            android:id="@+id/chief_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/chief_user_tv"/>
            <EditText
                android:id="@+id/chief_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chief_user_edit"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/chief_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/chief_user"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/chief_pw_tv"/>
            <EditText
                android:id="@+id/chief_pw_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chief_pw_edit"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/register_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/chief_pw"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/register_role_tv"/>
            <Spinner 
    			android:layout_width="match_parent"
    			android:layout_height="wrap_content"
    			android:id="@+id/register_spinner"
    		/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/chief_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/register_role"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/chief_code_tv"/>
            <EditText
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/chief_code_edit"/>
            <ImageView
                android:id="@+id/chief_code_img"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chief_code_img"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/chief_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_below="@id/chief_code"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/chief_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:text="@string/chief_login"
                android:layout_marginRight="10dp"/>
            <Button
                android:id="@+id/chief_register"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:layout_marginLeft="10dp"
                android:text="@string/chief_register"/>
        </LinearLayout>
       
    </RelativeLayout>
    

</RelativeLayout>
