<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity" >
    <RelativeLayout 
        android:id="@+id/register_top"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <ImageButton
            android:id="@+id/register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:contentDescription="@string/back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/register_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_tv"
            android:textSize="20sp"
            android:textColor="#ff5a60"
            android:layout_toRightOf="@id/register_back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>
    <RelativeLayout 
        android:id="@+id/register_middle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_top"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
        <LinearLayout 
            android:id="@+id/register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/register_user_tv"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_user_edit"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/register_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/register_user"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/register_pw_tv"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_pw_edit"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/register_pwAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/register_pw"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/register_pwAgain_tv"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_pwAgain_edit"/>
        </LinearLayout>
        <LinearLayout 
            android:id="@+id/register_btg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/register_pwAgain"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_bg"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:text="@string/register_button"/>
            </LinearLayout>
    </RelativeLayout>
    
    

</RelativeLayout>
